fixed flex wrap

--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -76,6 +76,7 @@
 
 .cards {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   margin: 30px;
 }
